ref/tel/test/pos/schema-recursive-definition.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name tree-schema

record node
  field value string
  field child node

document
  field root node
