ref/tel/test/neg/e207-layer-field-type-mismatch.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e209-test

document
  field foo
    scalar string

layer
  name extension
  root
    field foo
      scalar string
